Fix homepage so that navbar overlaps correctly with garden

--- a/frontend/src/pages/Homepage.css
+++ b/frontend/src/pages/Homepage.css
@@ -2,4 +2,9 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 0;
+    }
+    
+    .glitch-embed-wrap {
+        z-index: 1;
 }
